--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,23 +5,23 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "Publications"
-    url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
-  - title: "CV"
+ - title: "个人主页"
     url: /cv/
     
-  - title: "Guide"
+  - title: "科研成果"
+    url: /publications/
+
+  - title: "科研项目"
+    url: /talks/    
+
+  - title: "教研教改"
+    url: /teaching/    
+    
+  - title: "人才培养"
+    url: /portfolio/
+        
+  - title: "其他"
+    url: /year-archive/
+      
+  - title: "其他"
     url: /markdown/
